Fix text jump

--- a/public/css/starter-template.css
+++ b/public/css/starter-template.css
@@ -108,7 +108,7 @@ table.table-condensed {
 
 .btn-xlarge {
     padding: 18px 96px;
-    font-size: 26px;
+    font-size: 24px;
     line-height: normal;
     -webkit-border-radius: 8px;
        -moz-border-radius: 8px;
